--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -286,10 +286,10 @@
 
 
 
-
+fetchData();
 
         // Fetch data every 2 seconds
-        setInterval(fetchData, 2000);
+        setInterval(fetchData(), 2000);
     </script>
 </body>
 </html>
