--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -164,7 +164,7 @@
         </div>
 
         <div class="nav-btn">
-            <a href="humidity-monitor/">Next: Humidity</a>
+            <a href="{% url 'humidity-monitor' %}">Next: Humidity</a>
         </div>
 
         <p id="datetime"></p>
