--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -164,7 +164,7 @@
         </div>
 
         <div class="nav-btn">
-            <a href="temperature-monitor">Previous: Temperature</a>
+            <a href="{% url 'temperature-monitor' %}">Previous: Temperature</a>
         </div>
 
         <p id="datetime"></p>
