--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -167,6 +167,8 @@
             <a href="{% url 'temperature-monitor' %}">Previous: Temperature</a>
         </div>
 
+        <button onclick="window.location.href='/history/'">View History</button>
+
         <p id="datetime"></p>
     </div>
 
