--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -150,7 +150,9 @@
 <body>
     <div class="container mt-5">
         <h1>Humidity</h1>
-        
+        <div class="nav-btn">
+            <a href="{% url 'history' %}">Previous: Temperature</a>
+        </div>
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Humidity</h5>
