--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -23,7 +23,7 @@
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            max-width: 100%;
+            max-width: 75%;
         }
 
         h1 {
@@ -204,7 +204,7 @@
                     borderWidth: 2,
                     tension: 0.4,
                     pointRadius: 3,
-                    fill:false,
+                    fill:true,
                     pointBackgroundColor: '#f97316'
                 }]
             },
