--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -25,6 +25,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             max-width: 90%;
             margin: auto;
+            max-height: auto;
         }
 
         h1 {
