--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -23,9 +23,8 @@
             padding: 15px;
             border-radius: 12px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            max-width: 90%;
+            max-width: 100%;
             margin: auto;
-            max-height: auto;
         }
 
         h1 {
@@ -66,12 +65,14 @@
             border-radius: 12px;
             background-color: #1c1f26;
             position: relative;
+            width: 100%;
+            height: 60vh; /* Adjusted to occupy 60% of the viewport height */
         }
 
         canvas {
             display: block;
-            height: 250px;
-            max-width: 100%;
+            width: 100% !important;
+            height: 100% !important;
         }
 
         #datetime {
@@ -97,10 +98,7 @@
 
             .chart-box {
                 padding: 10px;
-            }
-
-            canvas {
-                height: 200px;
+                height: 50vh; /* Adjusted to occupy 50% of the viewport height */
             }
 
             #datetime {
@@ -121,8 +119,9 @@
                 font-size: 1.25rem;
             }
 
-            canvas {
-                height: 180px;
+            .chart-box {
+                padding: 10px;
+                height: 45vh; /* Adjusted to occupy 45% of the viewport height */
             }
 
             .container {
@@ -219,15 +218,17 @@
                 }]
             },
             options: {
+                responsive: true,
+                maintainAspectRatio: false, // Allow the chart to adjust based on the container's size
                 scales: {
                     x: {
-                        title:{
+                        title: {
                             display: true,
                             text: 'Time'
                         }
                     },
                     y: {
-                        title:{
+                        title: {
                             display: true,
                             text: 'Temperature'
                         }
